# dazah-backend

./: .dockerignore  .env.example  .env.local  .env.template  .gitignore  AGENTS.md  CLAUDE.md  DATABASE_SETUP.md  DEPLOYMENT-GUIDE.md  Dockerfile  README.md  REAGENT_AI_PROMPT.md  alembic.ini  dazah.db  departments.json  deploy.bat  deploy.sh  docker-compose.yml  entrypoint.sh  hazard_inspection_data.sql  init-db.sh  label_verification_data.sql  nginx.conf  openapi.json  org_chart.md  pyproject.toml  regulatory_tracker_data.sql  start.sh  teams.json  teams_imported.json  test_current.docx  test_img.xlsx  test_signin_new.xlsx
.claude/: settings.local.json
alembic/: env.py
app/: main.py
dazah-backend/: .env.example  .env.production.template  .gitignore  CLAUDE.md  Dockerfile  add_columns.sql  alembic.ini  check_hplc.py  check_table.py  create_db.ps1  create_tables.py  docker-compose.yml  fix_encoding.py  import_hplc_direct.py  import_hplc_reference.py  import_hplc_reference_sync.py  list_db.ps1  makefile  migrate_sop.py  prompt.md  pyproject.toml  test_conn.py  test_db.ps1  test_tcp.ps1
dazah-frontend/: .env.example  .gitignore  .npmrc  CLAUDE.md  Dockerfile  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml
docs/: AI_FILL_GUIDE.md  PHASE1_REGULATORY_TRACKER.md  regulatory_tracker_er_diagram.md
edbo_service/: Dockerfile  main.py  requirements.txt
edboplus-main/: README.md  environment.yml  setup.py
examples/: commands.md  module-structure.md
scripts/: backfill_all.py  backfill_regulatory.py  check_migration_scope.py  check_open_id.py  ci_create_tables.py  export_label_verification_sql.py  export_openapi.py  export_safety_sql.py  fix_publish_date.py  seed.py  (+18 more)
(+1580 files in other folders)
