[project]
name = "dazah-backend"
version = "0.1.0"
description = "原料药事业部工厂系统"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "python-docx>=1.2.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.2",
    "pg8000>=1.31.5",
    "lark-oapi>=1.6.8",
    "pyjwt[crypto]>=2.10.0",
    "tqdm>=4.68.1",
    "openpyxl>=3.1.5",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-multipart>=0.0.6",
    "playwright>=1.40.0",
    "openai>=2.41.0",
    "apscheduler>=3.10.0",
    "scikit-learn>=1.4",
    "scipy>=1.10.0",
    "ordered-set==4.0.2",
    "croniter>=6.2.2",
    "fastmcp>=3.4.2",
    "pytesseract>=0.3.13",
    "pillow>=10.0.0",
    "pdf2image>=1.16.0",
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.0",
    "minio>=7.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "apscheduler>=3.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
